# awesome-omarchy-tui

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
scripts/: README.md  generate-aur-pkgbuild.sh
src/: app.rs  boot_screen.rs  client.rs  events.rs  lib.rs  main.rs  models.rs  parser.rs  ui.rs  ui_backup.rs
