[package]
name = "awesome-omarchy-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal UI application for browsing the awesome-omarchy repository"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/username/awesome-omarchy-tui"
keywords = ["tui", "terminal", "cli", "github", "awesome"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.27"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.28"
anyhow = "1.0"
serde_json = "1.0"
dirs = "5.0"
pulldown-cmark = "0.11"
regex = "1.0"

[[bin]]
name = "awesome-omarchy-tui"
path = "src/main.rs"