[package]
name = "awesome-omarchy-tui"
version = "0.3.4"
edition = "2024"
description = "A beautiful terminal UI for browsing the awesome-omarchy repository with search, navigation, and GitHub integration"
authors = ["Altynbek Orumbayev <aorumbayev@pm.me>"]
license = "MIT"
repository = "https://github.com/aorumbayev/awesome-omarchy-tui"
keywords = ["tui", "terminal", "cli", "github", "awesome", "omarchy"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.27"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "fs", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
crossterm = "0.29"
anyhow = "1.0"
serde_json = "1.0"
dirs = "5.0"
pulldown-cmark = "0.11"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip", 
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["updater"]
updater = ["dep:self_update"]

[[bin]]
name = "awsomarchy"
path = "src/main.rs"